--- a/app/src/main/res/layout/activity_films.xml
+++ b/app/src/main/res/layout/activity_films.xml
@@ -21,6 +21,7 @@
         app:itemIconTint="@android:color/white"
         app:itemTextAppearanceActive="@style/Title.White"
         app:itemTextColor="@android:color/white"
+        app:itemBackground="@color/colorPrimaryDark"
         app:menu="@menu/menu_navigation">
 
     </android.support.design.widget.BottomNavigationView>
