--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -2,8 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+            android:id="@+id/action_trending"
+            android:checked="true"
+            android:icon="@drawable/ic_trending"
+            android:title="@string/title_trending" />
+
+    <item
         android:id="@+id/action_discover"
-        android:checked="true"
         android:icon="@drawable/ic_discover"
         android:title="@string/title_discover" />
 
