--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -13,6 +13,11 @@
         android:title="@string/title_discover" />
 
     <item
+            android:id="@+id/action_search"
+            android:icon="@drawable/ic_search"
+            android:title="@string/title_search" />
+
+    <item
         android:id="@+id/action_watchlist"
         android:icon="@drawable/ic_watchlist"
         android:title="@string/title_watchlist" />
